<resources>
    <string name="app_name">MLearning</string>
    <string name="drawer_open">Menu opened</string>
    <string name="drawer_close">Menu closed</string>
    <string name="action_settings">Settings</string>

    <string name="action_done">Done</string>
    <string name="toolbar_register">Register</string>
    <string name="action_cancel">Cancel</string>
    <string name="title_activity_update_profile">UpdateProfile</string>
    <string name="hint_name">Full Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_old_password">Old Password</string>
    <string name="hint_new_password">New Password</string>
    <string name="hint_retype_password">Retype Password</string>
    <string name="avatar_text">Avatar</string>
    <string name="pdf">PDF</string>

    <string-array name="list_level">
        <item>all</item>
        <item>basic</item>
        <item>advance</item>
        <item>expert</item>
    </string-array>

    <string-array name="list_status">
        <item>all</item>
        <item>learned</item>
        <item>not learned</item>
    </string-array>
</resources>
